# BigV-twins

./: .changelog_baseline.json  .env.example  .gitignore  README.md  ROADMAP.md  bloggers.json  chats.db-journal  deploy.sh  pyproject.toml  topics.json
deploy/: Caddyfile.example
deploy/systemd/: bigv-twins-blogger.service  bigv-twins-daily.timer  bigv-twins-healthcheck.service  bigv-twins-healthcheck.timer  bigv-twins-market.service
docs/: README.md  bug-fix-report.md  roadmap.md
docs/handoff/: architecture.md  project-overview.md  user-context.md
docs/proposals/: daily-digest-prompt-review.md  daily-digest-prompt-v2-review.md  persona-update-design.md
docs/test-reports/: closed-review-matrix-test.md  closed-review-prompt-test.md  daily-digest-abc-evaluation.md  daily-digest-cross-test-matrix.md  daily-digest-model-comparison.md  prompt-template-test-report.md
openclaw/: README.md  install_agents.sh
personas/: buffett.md  eyu.md  graham.md  lynch.md  mr-dang.md  munger.md  paipi.md  sanren.md  shen.md
prompts/: recap.md
prompts/brief/: blogger-daily.md  daily-digest.md
prompts/chat/: advisor.md  blogger.md  master-challenge.md  master.md
prompts/persona/: update-persona.md
prompts/review/: closed-review.md  monthly-review.md  single-trade-review.md  ticker-review.md
scripts/: ab_compare.py  add_blogger.py  generate_personas.py  generate_skills.py  import_brokerage_csv.py  ingest_buffett.py  ingest_master.py  test_mcp_client.py
skills/: README.md
skills/bigv-eyu/: SKILL.md
skills/bigv-mr-dang/: SKILL.md
skills/bigv-paipi/: SKILL.md
skills/bigv-sanren/: SKILL.md
skills/bigv-shen/: SKILL.md
systemd/: bigv-twins-blogger.service  bigv-twins-daily.service  bigv-twins-market.service  bigv-twins-server.service  bigv-twins-web.service  install_systemd.sh
(+96 files in other folders)
