[project]
name = "bigv-twins"
version = "0.1.0"
description = "Per-blogger digital twins on top of the Zhihu archive — RAG-only MCP server for OpenClaw"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.40",
    "tqdm>=4.66",
]

[project.scripts]
bigv-twins-server = "bigv_twins.server:main"
bigv-twins-index = "bigv_twins.index:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
