[project]
name = "bigv-twins"
version = "0.1.0"
description = "Per-blogger digital twins on top of the Zhihu archive — RAG-only MCP server for OpenClaw"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.40",
    "openai>=1.40",
    "tqdm>=4.66",
    # Web app (赛博大V chat UI)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "bcrypt>=4.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "akshare>=1.18",  # stock data
]

[project.scripts]
bigv-twins-server = "bigv_twins.server:main"
bigv-twins-index = "bigv_twins.index:main"
bigv-twins-web = "bigv_twins.web.app:main"
bigv-twins-web-bootstrap = "bigv_twins.web.bootstrap:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
